--- a/ui/package.json
+++ b/ui/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
+    "vue-slider-component": "^4.1.0-beta.7",
     "vue3-lottie": "^3.3.1",
     "vuex": "^4.0.0"
   },
