--- a/ui/package.json
+++ b/ui/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@vueuse/motion": "^3.0.3",
+    "axios": "^1.8.3",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
