--- a/ui/package.json
+++ b/ui/package.json
@@ -8,9 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@iframe-resizer/vue": "^5.3.3",
     "@vueuse/motion": "^3.0.3",
     "axios": "^1.8.3",
     "core-js": "^3.8.3",
+    "uuid": "^11.1.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vue-slider-component": "^4.1.0-beta.7",
